--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ packages = [{include = "connector_postgres_v2", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.28.2"
-# spiffworkflow-connector-command = {git = "https://github.com/sartography/spiffworkflow-connector-command.git", rev = "main"}
-spiffworkflow-connector-command = {develop = true, path = "../spiffworkflow-connector-command"}
+spiffworkflow-connector-command = {git = "https://github.com/sartography/spiffworkflow-connector-command.git", rev = "main"}
+# spiffworkflow-connector-command = {develop = true, path = "../spiffworkflow-connector-command"}
 
 
 [tool.poetry.group.dev.dependencies]
